fixed footer spacing/layout

--- a/main.css
+++ b/main.css
@@ -330,34 +330,39 @@ li {
 
 .contact {
   text-align: center;
-
 }
-.contact--title {
-  font-size: 3.5rem;
-  padding: 30px;
+.contact__title {
+  padding-bottom: 30px;
 }
-.contact--image {
-  padding: 200px 50px 50px 0px;
+.contact__image {
+  display: block;
+  max-width: 1200px;
+  margin: 0 auto -150px auto;
+  padding-top: 200px;
 }
 
 /*footer*/
 
 .footer {
   background-color: var(--jungle-dark);
+  padding-top: 150px;
 }
 .foot-top--main {
   display: flex;
   justify-content: space-between;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .foot-top--main-item {
   font-family: var(--font-sans-semibold);
   font-size: .8rem;
-  padding: 70px;
+  padding: 50px 0 50px 0;
 }
 .foot-top--sub {
   font-family: var(--font-sans-light);
   font-size: .75rem;
-  padding-top: 20px;
+  padding-top: 15px;
 }
 .footer-top--sub-item {
   padding: 10px 10px 10px 0px;
@@ -365,7 +370,6 @@ li {
 
 .footer-middle {
   border-top: 1px solid var(--trout);
-  padding: 0px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -375,33 +379,41 @@ li {
 .foot-mid--right {
   display: flex;
   align-items: center;
-  padding: 0px 20px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .foot-mid--left-item,
 .foot-mid--right-item {
   font-family: var(--font-sans-semibold);
   font-size: .8rem;
   padding: 20px;
-  align-items: center;
 }
 .footer-bottom {
   background-color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 .foot-bottom {
   display: flex;
-  padding: 0px 40px;
+  justify-content: space-between;
+  align-items: center;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.foot-bottom-left {
+  display: flex;
+  margin-left: -30px;
+
 }
 .foot-bottom-right {
   display: flex;
   font-size: .55rem;
-  padding: 0px 40px;
+  margin-right: -30px;
 }
 .foot-bottom--item {
   font-family: var(--font-sans-semibold);
   padding: 30px;
+
 }
 .phone {
   font-family: var(--font-sans-light);
